sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:11: error: '<-' expected but ')' found.
		for (i<getNombrevaleurs()-2 to 0 by -1){
                                                      ^AlgCocktailSort1:17: error: illegal start of simple expression
	}while(f=true)
        ^